<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.phnx28.notifsync.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_sender"
            app:destination="@id/senderFragment" />

        <action
            android:id="@+id/action_home_to_pairing"
            app:destination="@id/pairingFragment" />

    </fragment>

    <fragment
        android:id="@+id/senderFragment"
        android:name="com.phnx28.notifsync.ui.sender.SenderFragment"
        android:label="@string/sender_mode"
        tools:layout="@layout/fragment_sender">

        <action
            android:id="@+id/action_sender_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/pairingFragment"
        android:name="com.phnx28.notifsync.ui.pairing.PairingFragment"
        android:label="@string/pair_device"
        tools:layout="@layout/fragment_pairing">

        <action
            android:id="@+id/action_pairing_to_receiver"
            app:destination="@id/receiverFragment" />

    </fragment>

    <fragment
        android:id="@+id/receiverFragment"
        android:name="com.phnx28.notifsync.ui.receiver.ReceiverFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_receiver">

        <action
            android:id="@+id/action_receiver_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />

    </fragment>

</navigation>
